--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <th>速度与稳定性</th>
         </tr>
         <tr>
-            <td><a href="https://songshugpt.com">songshugpt.com</a></td>
+            <td><a href="https://songshugpt.com">https://songshugpt.com</a></td>
             <td>GPT-4, GPT-3.5</td>
             <td>有</td>
             <td>MidJourney 绘图支持</td>
@@ -68,14 +68,14 @@
             <td>⭐⭐⭐⭐⭐</td>
         </tr>
         <tr>
-            <td><a href="https://ai.panda.xyz">ai.panda.xyz</a></td>
+            <td><a href="https://ai.panda.xyz">https://ai.panda.xyz</a></td>
             <td>GPT-4, GPT-3.5</td>
             <td>有</td>
             <td>API 调用功能</td>
             <td>⭐⭐⭐⭐</td>
         </tr>
         <tr>
-            <td><a href="https://givemegpt.top">givemegpt.top</a></td>
+            <td><a href="https://givemegpt.top">https://givemegpt.top</a></td>
             <td>GPT-3.5</td>
             <td>有</td>
             <td>简单免费，新手友好</td>
@@ -89,10 +89,10 @@
     <table>
         <tr>
             <th>功能项</th>
-            <th><a href="https://songshugpt.com">songshugpt.com</a></th>
+            <th><a href="https://songshugpt.com">https://songshugpt.com</a></th>
             <th><a href="https://gptdog.cc">gptdog</a></th>
-            <th><a href="https://ai.panda.xyz">ai.panda.xyz</a></th>
-            <th><a href="https://givemegpt.top">givemegpt.top</a></th>
+            <th><a href="https://ai.panda.xyz">https://ai.panda.xyz</a></th>
+            <th><a href="https://givemegpt.top">https://givemegpt.top</a></th>
         </tr>
         <tr>
             <td>支持 GPT-4</td>
@@ -144,12 +144,12 @@
     <h3>步骤 1：选择镜像站</h3>
     <p>根据您的需求选择适合的镜像站点。以下是一些推荐：</p>
     <ul>
-        <li>功能丰富：选择 <a href="https://songshugpt.com">songshugpt.com</a> ，支持 GPT-4 和 MidJourney 绘图。</li>
-        <li>高级对话：选择 <a href="https://ai.panda.xyz">ai.panda.xyz</a> ，体验高级语音对话功能。</li>
+        <li>功能丰富：选择 <a href="https://songshugpt.com">https://songshugpt.com</a> ，支持 GPT-4 和 MidJourney 绘图。</li>
+        <li>高级对话：选择 <a href="https://ai.panda.xyz">https://ai.panda.xyz</a> ，体验高级语音对话功能。</li>
     </ul>
     
     <h3>步骤 2：注册或直接使用</h3>
-    <p>需要注册：部分站点如 <a href="https://songshugpt.com">songshugpt.com</a> 需要通过国内邮箱注册账号，按照提示填写信息即可完成。</p>
+    <p>需要注册：部分站点如 <a href="https://songshugpt.com">https://songshugpt.com</a> 需要通过国内邮箱注册账号，按照提示填写信息即可完成。</p>
     
     <h3>步骤 3：选择服务版本</h3>
     <p>根据您的需求选择合适的模型版本：</p>
@@ -170,8 +170,8 @@
     <h3>步骤 5：探索高级功能</h3>
     <p>根据所选站点，您还可以探索以下高级功能：</p>
     <ul>
-        <li>MidJourney 绘图：在 <a href="https://songshugpt.com">songshugpt.com</a>，使用文本描述生成精美图像。</li>
-        <li>高级语音对话：在 <a href="https://songshugpt.com">songshugpt.com</a>，通过语音与 ChatGPT 互动。</li>
+        <li>MidJourney 绘图：在 <a href="https://songshugpt.com">https://songshugpt.com</a>，使用文本描述生成精美图像。</li>
+        <li>高级语音对话：在 <a href="https://songshugpt.com">https://songshugpt.com</a>，通过语音与 ChatGPT 互动。</li>
     </ul>
 
     <h2>为什么选择 ChatGPT 镜像站？</h2>
@@ -190,7 +190,7 @@
         <li><strong>这些镜像站是否安全？</strong><br>是的，这些站点经过基础隐私检测，但建议避免在聊天中输入个人敏感信息。此外，建议使用强密码并定期更换，以确保账号安全。</li>
         <li><strong>使用镜像站是否需要翻墙？</strong><br>不需要，这些推荐站点均可直接在国内网络中访问。无需额外的 VPN 或代理工具，节省了使用成本和时间。</li>
         <li><strong>镜像站是否永久免费？</strong><br>部分站点提供免费额度，适合日常使用；高级功能或更大额度可能需要付费，具体收费标准请参考各站点的用户协议或定价页面。</li>
-        <li><strong>哪些站点适合新手使用？</strong><br><a href="https://songshugpt.com">songshugpt.com</a>：界面简洁，操作简单，非常适合新手快速上手。</li>
+        <li><strong>哪些站点适合新手使用？</strong><br><a href="https://songshugpt.com">https://songshugpt.com</a>：界面简洁，操作简单，非常适合新手快速上手。</li>
         <li><strong>如何保护我的隐私和数据安全？</strong><br>虽然这些镜像站点已经采取了一定的安全措施，但用户仍应谨慎对待个人信息。避免在对话中透露敏感数据，如身份证号码、银行信息等。此外，定期检查账号活动，确保未授权的访问。</li>
         <li><strong>如果遇到技术问题，应该如何解决？</strong><br>您可以通过以下方式获得帮助：
             <ul>
